build/unix/stdc++compat/stdc++compat.cpp
@@ -66,11 +66,11 @@ namespace std __attribute__((visibility("default"))) {
         void transfer(_List_node_base * const __first,
                       _List_node_base * const __last) throw();
 
+        void reverse() throw();
+
 /* Hack to avoid GLIBCXX_3.4.15 symbol versions */
 #if MOZ_LIBSTDCXX_VERSION >= GLIBCXX_VERSION(3, 4, 15)
         static void swap(_List_node_base& __x, _List_node_base& __y) throw ();
-
-        void reverse() throw();
     };
 
     namespace __detail {
@@ -85,10 +85,10 @@ namespace std __attribute__((visibility("default"))) {
         void _M_transfer(_List_node_base * const __first,
                          _List_node_base * const __last) throw();
 
+        void _M_reverse() throw();
+
 #if MOZ_LIBSTDCXX_VERSION >= GLIBCXX_VERSION(3, 4, 15)
         static void swap(_List_node_base& __x, _List_node_base& __y) throw ();
-
-	void _M_reverse() throw();
 #endif
     };
 
@@ -113,18 +113,18 @@ namespace std __attribute__((visibility("default"))) {
                                                  (std::_List_node_base * const)__last);
     }
 
+    void
+    _List_node_base::_M_reverse() throw ()
+    {
+        ((std::_List_node_base *)this)->reverse();
+    }
+
 #if MOZ_LIBSTDCXX_VERSION >= GLIBCXX_VERSION(3, 4, 15)
     void
     _List_node_base::swap(_List_node_base& __x, _List_node_base& __y) throw ()
     {
         std::_List_node_base::swap(*((std::_List_node_base *) &__x),
                                    *((std::_List_node_base *) &__y));
-    }
-
-    void
-    _List_node_base::_M_reverse() throw ()
-    {
-        ((std::_List_node_base *)this)->reverse();
     }
 }
 #endif
